Update Schedule to use ObservableList